# DesignPatterns

./: .gitignore
Chapter03_Creational/: AbstractFactory.cpp  AbstractFactory.h  AbstractFactory_demo.cpp  Base.cpp  Base.h  Base_demo.cpp  Builder.cpp  Builder.h  Builder_demo.cpp  FactoryMethod.cpp  FactoryMethod.h  FactoryMethod_demo.cpp  MapSite.cpp  MapSite.h  Prototype.cpp  Prototype.h  Prototype_demo.cpp
Chapter04_Structural/: Adapter.cpp  Adapter.h  Adapter_demo.cpp  Bridge.cpp  Bridge.h  Bridge_demo.cpp  Composite.h  Data_Struct.h  Decorator.h
Chapter05_Behavioral/: Iterator.h  Iterator_demo.cpp  List.h  Observer.cpp  Observer.h  Observer_demo.cpp
MiniTrader/: CMakeLists.txt  My_Quote_Api.cpp  My_Quote_Api.h  My_Quote_Api_Test.cpp  My_Trade_Api.cpp  My_Trade_Api.h  Quote_Api.h  Quote_Spi.cpp  Quote_Spi.h  Quote_api.h  Quote_generator.cpp  Quote_generator.h  Quote_spi.cpp  Quote_spi.h  Read_ini.cpp  Read_ini.h  Strategy.cpp  Strategy.h  Trade.ini  Trade_Api.h  Trade_Api_Struct.h  Trade_Spi.cpp  Trade_Spi.h  Trade_generator.cpp  Trade_generator.h  base_data_struct.h  generator_global.cpp  generator_global.h  local_quote_convert.cpp  local_quote_convert.h  local_quote_struct.h  local_trade_convert.h  local_trade_struct.h  position.txt  quote_api_struct.h  read_local_quote.cpp  read_local_quote.h  read_local_quote_test.cpp  sim_quote_convert.cpp  sim_quote_convert.h  (+7 more)
